# parinfer-rust-emacs

./: Cargo.toml  README.adoc  flake.nix
.github/workflows/: build.yaml  release-freebsd.yml  release.yaml
cli/: Cargo.toml
cli/src/: cli_options.rs  kakoune.rs  main.rs
lib/: Cargo.toml
lib/src/: emacs_wrapper.rs  lib.rs
src/: emacs_wrapper.rs
