[package]
name = "parinfer_rust"
version = "0.4.6"
authors = ["Jason Felice <jason.m.felice@gmail.com>"]

[[bin]]
name = "parinfer-rust"
path =  "src/main.rs"

[dependencies]
getopts = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parinfer_lib = { path = "../lib", default-features=false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.4"
